Add contact page functionality

--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -1,1 +1,16 @@
-<p>contact-page works!</p>
+<div class="content-box">
+    <h3>Send the owner a message:</h3>
+    <div>
+        <label>
+            Your email address:
+            <input name="email" [(ngModel)]="email">
+        </label>
+    </div>
+    <div>
+        <label>
+            Your message:
+            <textarea name="message"  cols="20" rows="5" [(ngModel)]="message"></textarea>
+        </label>
+    </div>
+    <button (click)="sendMessage()">Send</button>
+</div>
