--- a/src/app/my-listings-page/my-listings-page.component.html
+++ b/src/app/my-listings-page/my-listings-page.component.html
@@ -9,3 +9,6 @@
         <button (click)="onDeleteClick(listing.id)">Delete</button>
     </div>
 </div>
+<a routerLink="/new-listing">
+    <button>Create New Listing</button>
+</a>
