--- a/src/app/edit-listing-page/edit-listing-page.component.html
+++ b/src/app/edit-listing-page/edit-listing-page.component.html
@@ -1,4 +1,9 @@
 <div class="content-box">
     <h2>Edit Listing</h2>
-    <app-listing-data-form></app-listing-data-form>
+    <app-listing-data-form
+        buttonText="Save Changes"
+        [currentName]="listing.name"
+        [currentDescription]="listing.description"
+        [currentPrice]="listing.price"
+        (onSubmit)="onSubmit()"></app-listing-data-form>
 </div>
