--- a/src/app/listing-data-form/listing-data-form.component.html
+++ b/src/app/listing-data-form/listing-data-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onButtonClicked()">
     <div>
         <label for="name">
             Name:
@@ -17,5 +17,5 @@
         </label>
         <input id="price" name="price" type="text" [(ngModel)]="price">
     </div>
-    <button type="submit">Create Listing</button>
+    <button type="submit">{{buttonText}}</button>
 </form>
